# astro-true-north

./: README.md  pyproject.toml
docs/: ARCHITECTURE.md  CALIBRATION_ERROR_BUDGET.md  GOAL.md  HARDWARE_BRINGUP.md  MAGNETIC_MODEL_PROVIDER.md  MATH_MODEL.md  OPERATOR_WORKFLOW.md  PLATE_SOLVER.md  PRODUCT_BRIEF.md  REQUIREMENTS.md
scripts/: check.sh
src/astro_true_north/: __init__.py  alignment.py  bn220.py  cli.py  magnetic.py  nexstar.py  pipeline.py  plate_solving.py  serial_discovery.py  workflow.py  wt901.py
tests/: test_alignment.py  test_bn220.py  test_cli.py  test_fixtures.py  test_magnetic.py  test_nexstar.py  test_pipeline.py  test_plate_solving.py  test_serial_discovery.py  test_workflow.py  test_wt901.py
tests/fixtures/: README.md  alignment_math_cases.json  bn220_no_fix_nmea.txt  sensor_samples.json
